# Peptide_identification_with_custom_database

./: .gitignore  Composition_plots.ipynb  README.md  convert_uniref100_to_dmnd.py  custom_database_species.fasta  custom_database_species_clustered90.fasta  customdb_psm_analysis.ipynb  db_results_analysis.ipynb  metagenomicsdb_analysis.ipynb  pept2lca_genus_analysis.ipynb  peptides_aligned.tsv  pipeline2.ipynb  pipeline_algorithm.ipynb  pipeline_diamond.ipynb  pipeline_diamond_improved.ipynb  pipeline_diamond_proteomes.ipynb  pipeline_first.ipynb  pipeline_pept2lca.ipynb  pipeline_pept2prot.ipynb  pipeline_pept2taxa.ipynb  protein_overlap_with_metagen.ipynb  pyproject.toml  requirements.txt  taxa_overlap_with_metagen.ipynb  utils.py
Clustering/: diamond_clustering.ipynb  mmseq_clustering.ipynb
Community_comparisons/: Composition_plots.ipynb  taxa_overlap_with_metagen.ipynb
db_results_analysis/: customdb_psm_analysis.ipynb  metagenomics_withlcagiven_analysis.ipynb  metagenomicsdb_analysis.ipynb  metagenomicspsm_nolcagiven_analysis.ipynb  pept2lca_genus_analysis.ipynb  protein_overlap_with_metagen.ipynb  psms_only_in_metagen.ipynb  psms_overlap_with_metagen.ipynb
pipelines/: pipeline_algorithm.ipynb  pipeline_diamond.ipynb  pipeline_diamond_improved.ipynb  pipeline_diamond_proteomes.ipynb  pipeline_pept2lca.ipynb  pipeline_pept2taxa.ipynb
